# django-intercoolerjs-helpers

./: .bumpversion.cfg  .coveragerc  .gitignore  .travis.yml  CHANGELOG  LICENSE  MANIFEST.in  Makefile  README.rst  conftest.py  demo_project.py  setup.cfg  setup.py  test_settings.py  test_urls.py  tox.ini
intercooler_helpers/: __init__.py  decorators.py  helpers.py  middleware.py  views.py
intercooler_helpers/tests/: __init__.py  conftest.py  test_decorators.py  test_middleware.py  test_redirect_middleware.py  test_views.py
test_templates/: base.html  demo_project.html  form.html  form_include.html  infinite_scrolling.html  infinite_scrolling_include.html  infinite_scrolling_partial.html  polling.html  polling_include.html  polling_response.html  redirected.html
