# paths.py:44: RemovedInPytest4Warning: [pytest] section in setup.cfg files is deprecated, use [tool:pytest] instead
[tool:pytest]
norecursedirs=.* *.egg .svn _build src bin lib local include
testpaths=intercooler_helpers/tests
python_files=test_*.py
addopts=-vvv --showlocals --cov-report html:htmlcov --cov-report term-missing:skip-covered --cov-config .coveragerc --cov intercooler_helpers

[metadata]
license-file = LICENSE

[wheel]
universal = 1

[flake8]
max-line-length = 80

[check-manifest]
ignore =
    .travis.yml
    .bumpversion.cfg
    .idea
    .tox
    __pycache__
    bin
    include
    lib
    local
    share
    .Python
    htmlcov
